wrap text so progress indicator displays correctly (#208)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,8 @@
   float: right;
   display: block;
 }
+
+.accordion-section-left-column {
+  display: inline-block;
+  max-width: calc(100% - 142px);
+}
